Polished for Deere

--- a/pages/000-intro/001.md
+++ b/pages/000-intro/001.md
@@ -2,11 +2,9 @@
 layout: slide
 ---
 
-# Constantly Start Over
-
+## Constantly Start Over
 # Never Rewrite
-
-# Constantly Rewrite
+## Constantly Rewrite
 
 &nbsp;<br />
 
