--- a/pages/008-extract/007.md
+++ b/pages/008-extract/007.md
@@ -5,9 +5,10 @@ layout: slide
 # Ideal Situation
 
 1. Thorough Tests Around the Code-To-Be Extracted
-2. Delete Said Code, Not Tests
-3. Build Out Green Field Project (Baby!)* to Take Extracted Code's Place
-4. Drop in Newly Extracted Code
-5. Tests Still Pass
+2. Build Out Green Field Project (Baby!)\*
+3. Drop in Newly Extracted Code (library, application or API calls)
+4. Tests Still Pass
+5. Delete Old Code, Not Tests
+6. Tests Still Pass
 
 \* With Tests, of Course!
