--- a/pages/009-oldwithnew/005.md
+++ b/pages/009-oldwithnew/005.md
@@ -5,6 +5,6 @@ layout: slide
 # How Do We Integrate?
 
 1. Install the Legacy Software to a New Internal Server
-2. Add a Command Line Interface
+2. Add a Command Line Interface (Green Field, Baby!)
 3. Wrap a Web Service Around It (Green Field, Baby!)
 4. Profit
