--- a/pages/011-gettingstarted/005.md
+++ b/pages/011-gettingstarted/005.md
@@ -2,14 +2,13 @@
 layout: slide
 ---
 
-## Tools
-(In Order of Importance)
+## New Systems
 
-* Source Control
-* Tests
-* Environment Isolation
-* Automated
-  - Database Migrations
-  - Dependency Management
-  - Deployment
-  - Server Configuration
+### Treat Systems & Subsystems
+### Like Objects
+
+### Apply what you know about
+### OO to your architecture
+
+
+#### DRY, SRP, etc
