--- a/pages/012-browntogreen/004.md
+++ b/pages/012-browntogreen/004.md
@@ -2,12 +2,11 @@
 layout: slide
 ---
 
-## The Monolith Has Not Changed All That Much
+#### The Monolith Has Not Changed All That Much
+#### But It Is Starting to Look a Lot More Green
 
 ![Brown To Green Field][brownToGreen]
 
 
-## But It Is Starting to Look a Lot More Green
 
-
-[brownToGreen]: assets/images/BrownToGreen.jpg
+[brownToGreen]: assets/images/BrownToGreen.png
