--- a/pages/014-fin/001.md
+++ b/pages/014-fin/001.md
@@ -7,7 +7,7 @@ layout: slide
 &nbsp;
 
 ## @mattjmorrison
-## [http://mattjmorrison.com/icc11][icc11]
+## [http://mattjmorrison.com/deere][deere]
 
 
-[icc11]: http://mattjmorrison.com/icc11
+[deere]: http://mattjmorrison.com/deere
